# school_admin

./: .env.example  .pre-commit-config.yaml  .pre-commit-config.yml  Makefile  README.md  docker-compose.yml  lint.sh  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 6a19d52d344b_first.py
app/: .requirements.txt  init_data.py  main.py
app/core/: config.py  dependencies.py  logging_config.py  security.py
app/crud/: grade.py  invoice.py  payment.py  payment_type.py  school.py  student.py  user.py
app/db/: base.py  session.py
app/models/: __init__.py  grade.py  invoice.py  payment.py  payment_type.py  school.py  student.py  user.py
app/routers/: grades.py  invoices.py  payment_types.py  payments.py  schools.py  students.py  users.py
app/schemas/: grade.py  invoice.py  payment.py  payment_type.py  school.py  student.py  user.py
app/tests/: test_main.py  test_school.py
containers/api/: Dockerfile
containers/pgadmin/: Dockerfile  pgadmin.env
